@@ -18,7 +18,7 @@
 package org.apache.kafka.common.quota;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 /**
@@ -64,7 +64,7 @@ public class ClientQuotaFilter {
      * Constructs and returns a quota filter that matches all configured entities.
      */
     public static ClientQuotaFilter all() {
-        return new ClientQuotaFilter(Collections.emptyList(), false);
+        return new ClientQuotaFilter(List.of(), false);
     }
 
     /**
